EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==10/31/2009==
AndMetal: Changed HP regen calculations to be Live-like. Basically higher level regen will be about 50% more than it is currently & FD regen should be better than standing, but less than sitting (instead of 25% of sitting regen).
AndMetal: Races that get the HP Regen "bonus" (Iksar & Troll by default) can be customized as a bitmask via rule Character:BaseHPRegenBonusRaces(4352).
AndMetal: Added #setallskills alias for #setallskill/#setskillall.
AndMetal: Added '#rules get [rule]' for a single rule & '#rules values [catname]' for a category to allow real-time viewing of the rule values from the zone (not the DB).
AndMetal: Added client HP, Mana, & Endurance regen info to #showstats/#mystats

==10/30/2009==
KLS: Exported DoSpecialAttackDamage() to perl::mob;

==10/25/2009==
WildcardX: Tweaked guilds a little to accomodate integrating BOTS.
WildcardX: Bots can not join guilds in the same way as characters can. Bots can only be members, not officers.
WildcardX: Deprecated the legacy BotRaids system and all #bot raid commands. Also deprecated the legacy botgroups table.
WildcardX: Renamed the #bot group order ... series of commands into only #bot group ...

<SQL Required for BOTS> 1040_DeprecatedBotRaidsSystems.sql

==10/23/2009==
KLS: Added discussed work around for SoF > level 75 issue from forums.
WildcardX: Bot pets and bot pet items and bot pet buffs will now save their state to the database between zones and camps just like a character.
WildcardX: Add SQL to create unique columns in group_id and group_leaders tables in hopes of removing the last of the seemingly random issues with groups and zoning.

<SQL Optional> 1038_grouptablesuniquecolumndefinitions.sql
<SQL Required for BOTS> 1038_botpetstatepersists.sql

==10/21/2009==
WildcardX: Bots will now persist their buffs to the database while zoning or camped.
